# oracle-cosmos

./: .gitignore  Cargo.toml  address.txt
contracts/collector/: Cargo.toml
contracts/collector/src/: contract.rs  lib.rs  migration.rs  mock_querier.rs  queurier.rs  state.rs  testing.rs
contracts/custody_borai/: Cargo.toml
contracts/custody_borai/schema/: config_response.json  execute_msg.json  instantiate_msg.json
contracts/custody_borai/src/: collateral.rs  contract.rs  distribution.rs  error.rs  lib.rs  msgs.rs  state.rs
contracts/dex/: Cargo.toml
contracts/dex/examples/: schema.rs
contracts/dex/schema/: config_response.json  execute_msg.json  instantiate_msg.json
contracts/dex/src/: contract.rs  error.rs  lib.rs  msgs.rs  state.rs
contracts/distribution_model/: Cargo.toml
contracts/distribution_model/src/: contract.rs  tests.rs
contracts/distributor/: Cargo.toml
contracts/distributor/src/: contract.rs  testing.rs
contracts/helper/: Cargo.toml
contracts/helper/examples/: schema.rs
contracts/helper/schema/: execute_msg.json  query_external_msg.json
contracts/helper/src/: contract.rs  msgs.rs  state.rs  tests.rs
contracts/helpers/: Cargo.toml
contracts/helpers/examples/: schema.rs
contracts/helpers/schema/: collateral_ballance_response.json  config_response.json  deposit_rate_response.json  execute_msg.json  instantiate_msg.json  orai_balance_response.json  query_msg.json  total_ballance_deposit_response.json
contracts/helpers/src/: contract.rs  lib.rs  msgs.rs
contracts/interest_model/: .env  Cargo.toml
contracts/interest_model/examples/: schema.rs
contracts/interest_model/schema/: instantiate_msg.json
contracts/interest_model/src/: contract.rs  lib.rs  msgs.rs  tests.rs
contracts/liquidation_queue/: Cargo.toml
contracts/liquidation_queue/src/: asserts.rs  bid.rs  contract.rs  querier.rs  query.rs  state.rs
contracts/market/: Cargo.toml
contracts/market/examples/: schema.rs
contracts/market/schema/: config_response.json  cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  query_msg.json  state.json  state_response.json  token_instantiate_msg.json
contracts/market/src/: borrow.rs  contract.rs  deposit.rs  error.rs  querier.rs  state.rs
contracts/oracle/: Cargo.toml
contracts/oracle/examples/: schema.rs
contracts/oracle/schema/: execute_msg.json  feeder_response.json  instantiate_msg.json  prices_response_elem.json  query_msg.json
contracts/oracle/src/: contract.rs  lib.rs  msgs.rs  state.rs  tests.rs
contracts/orai_collector/: Cargo.toml
contracts/orai_collector/examples/: schema.rs
contracts/orai_collector/schema/: execute_msg.json  query_msg.json
contracts/orai_collector/src/: contract.rs  msgs.rs
contracts/orchai_token/: Cargo.toml
contracts/overseer/: Cargo.toml
contracts/overseer/examples/: schema.rs
contracts/overseer/schema/: config_response.json  execute_msg.json  instantiate_msg.json  migrate_msg.json  query_msg.json  whitelist_response_elem.json
contracts/overseer/src/: collateral.rs  contract.rs  error.rs  msgs.rs  querier.rs  state.rs
contracts/overseer/src/testing/: mock_querier.rs  tests.rs
contracts/sOrai_token/: Cargo.toml
contracts/staking/: Cargo.toml
(+19 files in other folders)
