[package]
name = "overseer"
version = "0.1.0"
authors = ["expertdicer@gmail.com"]
edition = "2018"
description = "A MoneyMarket custody contract - handles over loan management"
license = "MIT"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
moneymarket = { path = "../../packages/moneymarket", default-features = false, version = "0.3.1"}
cosmwasm-bignumber = {path = "../../packages/bignumber", version = "2.3.0"}
cosmwasm-std = "0.13.2"
cosmwasm-storage = { version = "0.13.2", features = ["iterator"] }
schemars = "0.7"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.2"
cw0 = { version = "0.5.0" } 
cw2 = { version = "0.5.0" } 
cw20 = {version = "0.5.0"}
cw20-base = {version = "0.5.0", features = ["library"]}
cw-storage-plus  = { version = "0.5.0" } 

[dev-dependencies]
cosmwasm-schema = "0.13.2"
terra-cosmwasm = "2.2.0"

[profile.dev]
overflow-checks = true
